fixed z-index issues

--- a/src/portals/PanKbase/assets/atacseq.css
+++ b/src/portals/PanKbase/assets/atacseq.css
@@ -7,9 +7,7 @@
 }
 .ReactModal__Content {
     top: 176px !important;
-}
-.pkb-nav {
-    z-index: 0 !important;
+    z-index: 10 !important;
 }
 .TrackLegend-label{
     font-size: small !important;
